
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_6__ {TYPE_2__* next; } ;
struct TYPE_7__ {struct TYPE_7__** child; struct TYPE_7__* next; TYPE_1__ versions; } ;
typedef TYPE_2__ CheckasmFuncVersion ;
typedef TYPE_2__ CheckasmFunc ;


 int free (TYPE_2__*) ;

__attribute__((used)) static void destroy_func_tree(CheckasmFunc *f)
{
    if (f) {
        CheckasmFuncVersion *v = f->versions.next;
        while (v) {
            CheckasmFuncVersion *next = v->next;
            free(v);
            v = next;
        }

        destroy_func_tree(f->child[0]);
        destroy_func_tree(f->child[1]);
        free(f);
    }
}
